--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "UX Strip - A comic archive for UX-related comics",
   "dependencies": {
+    "framer-motion": "^12.9.2",
     "next": "^15.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
