--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "framer-motion": "^12.9.2",
     "next": "^15.3.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-share": "^5.2.2"
   },
   "devDependencies": {
     "@types/node": "^22.15.2",
